--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -10,7 +10,7 @@
       .calculator-container{
         width: 70%;
         min-width: 244px;
-        height: 80%;
+        height: 70%;
         padding: 3rem;
         background-color: bisque;
         display: flex;
@@ -19,6 +19,12 @@
         justify-content: center;
         border: 2px solid black;
         border-radius: 2rem;
+        box-shadow: 0 0 5px black;
+      }
+      .calculator-container:hover{
+        transform: scale(0.95);
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0 0 25px black;
       }
       .calculator-container h1{
         font-size: 2.5rem;
@@ -66,10 +72,10 @@
  .calculator-box{
         grid-row: 2 / 3;
         grid-column: 1;
-        
+
       }
       .calculator-container{
-        padding: 1rem 0;
+        padding: 2rem 0;
         display: flex;
         flex-direction: column;
         border: 2px solid black;
@@ -91,7 +97,7 @@
         height: 15rem;
         width: 12.5rem;
         margin: 0.5rem;
-
+        padding: 0 0 0.75rem 0;
       }
       .btn{
         width: 2.5rem;
