--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -1,28 +1,46 @@
-/* Dark mode styling */
+/* Dark mode base styling */
 .dark-mode {
-  background-color: #121212;
+  background: linear-gradient(to right, #0b161d, #1a2c34, #223844);
   color: white;
+
 }
 
-.dark-mode .header,
+/* Header & Footer */
+.dark-mode header,
 .dark-mode footer {
-  background: linear-gradient(to right, #0f2027, #2c5364);
+    background: #0b161d;
+    box-shadow: 0 10px 50px white;
 }
 
-.dark-mode .body {
-  background: linear-gradient(to bottom right, #1a1a40, #2b2b6f, #3a0ca3);
-  color: white;
+.dark-mode .main-section {
+  
+  background: linear-gradient(to right, #0b161d, #1a2c34, #223844);
+}
+/* Weather box */
+.dark-mode .weather-box {
+  filter: brightness(1.0);
+  background: linear-gradient(to right, #0b161d, #1a2c34, #223844);
 }
 
-.dark-mode .weather-box,
-.dark-mode .calculator-box,
-.dark-mode .to-do-box,
-.dark-mode .note-box {
-  filter: brightness(0.9);
-}
-
+/* Footer links, text, etc. */
 .dark-mode footer a i,
 .dark-mode .date-box p,
-.dark-mode .weather p {
+.dark-mode .weather p
+{
   color: white;
 }
+.dark-mode .expense-info div,
+.dark-mode .calculator-container h1,
+.dark-mode .notes-container h2,
+.dark-mode .note-card p {
+  color: black;
+}
+
+
+/* Containers hover effect */
+.dark-mode .calculator-container:hover,
+.dark-mode .notes-container:hover,
+.dark-mode .expense-container:hover {
+  box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
+}
+
